2009-10-28 John Mair (Banisterfiend)
* added IL::ConvertImage(IL::RGBA, IL::UNSIGNED_BYTE) to Devil#load; ensures that all image data is in the same format (image files only support RGB/UB and RGBA/UB so make them all RGBA/UB)
* changed compile-time conditional for the IL_LBM constant. now checks if IL_LBM is defined before it tries IL_ILBM

2009-10-25 John Mair (Banisterfiend)
version 0.1.8.5
* added hooks: prepare_image_hook, create_image_hook, load_image_hook 
* e.g Devil.set_options :load_image_hook => proc { IL::ConvertImage(IL::RGBA, IL::UNSIGNED_BYTE) }
* added Devil.create_image() method for creating blank images (useful as a blitting canvas?)
* added :color parameter to create_image (to set background color of new image)
* added :in_profile and :out_profile to Devil.load_image and Devil.create_image
* color profiles do not appear to work! so not officially supported or documented.
* fixed gosu image flip bug
* added more tests and rdoc

2009-10-22 John Mair (Banisterfiend)
* added ESC exit from Devil::Image#show
* added optional :filter parameter to Devil::Image#thumbnail and Devil::Image#resize

2009-10-21 John Mair (Banisterfiend)
version 0.1.8
* made LANCZOS3 scaling filter the default for highquality thumbnails
* changed clear color to DevIL default (mother of pearl and full alpha)
* added blit function to HLA (high level API)
* added mirror, edge_detect, emboss, enlarge_canvas, etc to HLA
* added ILU_CENTER, ILU_LOWER_LEFT, ILU_PLACEMENT etc to LLA
* include ILU and IL modules in Devil::Image now
* made Devil::Image#show return self
* made Devil::Image#show use a dup of the image (so a 'snapshot' is taken of image)
* added Devil.set_options method to HLA
* refactored HLA to use an 'action' method, saved code duplication of set_binding/error_check etc.

2009-10-17 John Mair (Banisterfiend)
* ruby_il.c added:
* constants: IMAGE_DEPTH, ORIGIN_SET, CONV_PAL, CUR_IMAGE, ORIGIN_LOWER_LEFT, ORIGIN_LOWER_RIGHT