@@ -1,4 +1,9 @@
 2009-10-28 John Mair (Banisterfiend)
+* removed finalizer and replaced with explicit call to image.free at end of block. If no block is used, user must call image.free at end of use
+* above fixes memory leak.
+* changed STR2CSTR() to StringValuePtr() in ruby_il.c
+
+2009-10-28 John Mair (Banisterfiend)
 * added IL::ConvertImage(IL::RGBA, IL::UNSIGNED_BYTE) to Devil#load; ensures that all image data is in the same format (image files only support RGB/UB and RGBA/UB so make them all RGBA/UB)
 * changed compile-time conditional for the IL_LBM constant. now checks if IL_LBM is defined before it tries IL_ILBM
 
